tests/regression/baselines/err_pattern_wildcard_plus_duplicate.expected
ERROR
SyntaxError: Duplicate match pattern
  | `A x -> x
  | _ -> 0
  | `A y -> y + 1  // Duplicate after wildcard
    ^~~~                                       
Note: Variant already matched here:
match `A 5 with
  | `A x -> x
    ^~~~      
  | _ -> 0
  | `A y -> y + 1  // Duplicate after wildcard
